# gif-for-cocos2dx-3.x

./: README.md
Classes/: HelloWorldScene.cpp  HelloWorldScene.h
Classes/Gif/: Bitmap.cpp  Bitmap.h  CacheGif.cpp  CacheGif.h  CacheGifData.cpp  CacheGifData.h  FileData.cpp  FileData.h  GIFMovie.h  GIFMovieData.h  GifBase.cpp  GifBase.h  GifMacros.h  GifMovie.cpp  GifMovieData.cpp  GifUtils.h  InstantGif.cpp  InstantGif.h  InstantGifData.cpp  InstantGifData.h  Movie.cpp  Movie.h
Classes/Gif/gif_lib/: dgif_lib.c
CocosGifExample/: .cocos-project.json  CMakeLists.txt
CocosGifExample/Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
CocosGifExample/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
CocosGifExample/proj.android-studio/: settings.gradle
CocosGifExample/proj.android-studio/app/: AndroidManifest.xml  build.gradle
CocosGifExample/proj.ios_mac/GifExample.xcodeproj/: project.pbxproj
CocosGifExample/proj.tizen/: .project  tizen-manifest.xml
CocosGifExample/proj.win10/: GifExample.sln
CocosGifExample/proj.win32/: GifExample.sln  main.cpp
CocosGifExample/proj.win8.1-universal/: GifExample.sln
cocos2d/: README.md
lib/: CMakeLists.txt
lib/include/CocosGif/: Bitmap.h  CacheGif.h  GIFMovie.h  GifBase.h  GifUtils.h  InstantGif.h  Movie.h
lib/src/: Bitmap.cpp  CacheGif.cpp  GifBase.cpp  GifMovie.cpp  InstantGif.cpp  Movie.cpp
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android/jni/: Android.mk
proj.ios_mac/GIF.xcodeproj/: project.pbxproj
(+21 files in other folders)
